<?xml version="1.0" encoding="utf-8"?>
<ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:visibility="visible">
  
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    
 <TextView
        android:id="@+id/ShowTopics"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/show_topic"
        android:textColor="#20B2AA"
        android:textSize="14sp"
        android:textStyle="bold"
         />
    
      <TextView
        android:id="@+id/ShowTopicsItem"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textSize="14sp"
        android:textStyle="bold"
         />
    
	  <TextView
        android:id="@+id/ShowDescription"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/show_description"
        android:textColor="#20B2AA"
        android:textSize="14sp"
        android:textStyle="bold"
       />
	  
      <TextView
        android:id="@+id/ShowDescriptionItem"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textSize="14sp"
        android:textStyle="bold"
         />
      
        
     <TextView
        android:id="@+id/ShowAlarm"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/show_alarm"
        android:textColor="#20B2AA"
        android:textSize="14sp"
        android:textStyle="bold"
         />

  

    <TextView
        android:id="@+id/ShowAlarmItem"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_x="120sp"
        android:layout_y="125sp"
        android:textSize="14sp"
        android:textStyle="bold"
         />
    <TextView
        android:id="@+id/ShowLocation"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_x="22dp"
        android:layout_y="145dp"
        android:text="@string/show_location"
        android:textColor="#20B2AA"
        android:textSize="14sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/ShowLocationItem"
        android:layout_width="196dp"
        android:layout_height="31dp"
        android:layout_marginTop="0dp"
        android:layout_x="96sp"
        android:layout_y="146sp"
        android:textSize="14sp"
        android:textStyle="bold"
         />

</LinearLayout>
</ScrollView>